--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
 streamlit==1.32.0
 google-generativeai==0.8.5
 python-dotenv==1.0.1
-bcrypt>=4.0.1
-sqlalchemy>=2.0.0
+requests==2.31.0
+beautifulsoup4==4.12.3
+pydeck==0.8.0
+numpy==1.26.4
+pandas==2.2.1
+pillow==10.2.0
 python-jose[cryptography]>=3.3.0
 passlib>=1.7.4
+bcrypt>=4.0.1
+sqlalchemy>=2.0.0
 streamlit-ace>=0.1.1
 pygments>=2.15.1
 python-multipart>=0.0.6 
